--- a/css/layout.css
+++ b/css/layout.css
@@ -3,10 +3,20 @@
 
 .l-main {
 	padding: 140px 20px 40px;
+}
+.l-main:before {
+	content: "";
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
 	background-image: url("../img/bg.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 60% center;
+	z-index: -1;
 }
 
 
